external-crates/move/crates/move-compiler/tests/move_check/typing/spec_block_ok.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
assertion_line: 277
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E01002]: unexpected token
  ┌─ tests/move_check/typing/spec_block_ok.move:3:10
  │
3 │         (spec {}: ())
  │          ^^^^
  │          │
  │          Unexpected 'spec'
  │          Expected an expression term
